--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,7 @@
   <body class="theme-classic">
     
     <header class="theme-classic">
-      <div class="logo theme-classic">
-        <a href="./index.html">
-          <p class="logo theme-classic">Clémentine Digout</p>
-        </a>
+        <a href="./index.html" class="logo theme-classic">Clémentine Digout</a>
       </div>
       <nav class="nav-header theme-classic">
         <ul class="theme-classic">
@@ -39,6 +36,13 @@
           <div class="dots-moon"></div>
         </label>
       </div>
+      <div class="footer-theme-dark hidden">
+        <div class="contact theme-classic" id="contact">
+          <i class="fa-regular fa-envelope"></i>
+          <p>Contact</p>
+        </div>
+        <i class="fa-brands fa-linkedin-in"></i>
+      </div>
       <div class="dialog" id="nav-mobile">
         <div class="nav-mobile theme-classic">
           <nav class="theme-classic">
@@ -59,7 +63,7 @@
                 <div class="banner__content theme-classic">
                     <h1 class="theme-classic">Design Web et Developpement</h1>
                     <p class="theme-classic">Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. Sweet roll gummies sweet icing sweet roll wafer. Chocolate lemon drops jujubes jelly-o caramels jelly beans soufflé cheesecake pie. Cake sesame snaps jelly beans ice cream fruitcake danish ice cream. Cupcake gummies biscuit croissant caramels gingerbread jelly-o. Liquorice tootsie roll croissant sesame snaps chupa chups pastry marshmallow shortbread gummies.</p>
-                    <button class="btn-primary theme-classic">En savoir plus</button>
+                    <button class="btn-primary theme-classic">En savoir plus <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
             </div>
             <div class="banner__right theme-classic">
@@ -103,12 +107,14 @@
       <section id="a-propos"></section>
 
       <div id="dialog-projets" class="dialog">
-        <div>        
-          <button class="btn-close">X</button>
-          <button class="btn-previous">previous</button>
-          <button class="btn-next">next</button>
+        <div class="dialog-details-projets theme-classic theme-clasic">
+          <button class="btn-close btn-primary"><i class="fa-solid fa-xmark"></i></button>
+          <div class="dialog-content"></div>
+          <div class="btns-dialog">        
+            <button class="btn-previous btn-primary theme-clasic"><i class="fa-solid fa-chevron-left"></i> Précédent</button>
+            <button class="btn-next btn-primary theme-clasic">Suivant <i class="fa-solid fa-chevron-right"></i></button>
+          </div>
         </div>
-        <div class="dialog-content"></div>
       </div>
     </main>
 
