--- a/src/index.html
+++ b/src/index.html
@@ -78,20 +78,20 @@
           <i class="fa-solid fa-sliders filter-icon"></i>
         </header>
         <div class="filters theme-classic hidden">
-            <label for="design">Design UX
-              <input type="checkbox" data-filter="UX" class="checkbox-filter" name="UX">
+            <label class="checkbox-wrapper theme-classic" for="design">Design UX
+              <input type="checkbox" data-filter="UX" class="checkbox-filter theme-classic" name="UX">
             </label>
-            <label for="design">Design UI
-              <input type="checkbox" data-filter="UI" class="checkbox-filter" name="UI">
+            <label class="checkbox-wrapper theme-classic" for="design">Design UI
+              <input type="checkbox" data-filter="UI" class="checkbox-filter theme-classic" name="UI">
             </label>
-            <label for="design">Animation
-              <input type="checkbox" data-filter="animation" class="checkbox-filter" name="animation">
+            <label class="checkbox-wrapper theme-classic" for="design">Animation
+              <input type="checkbox" data-filter="animation" class="checkbox-filter theme-classic" name="animation">
             </label>
-            <label for="programmation">Programmation
-              <input type="checkbox" data-filter="programmation" class="checkbox-filter" name="programmation">
+            <label class="checkbox-wrapper theme-classic" for="programmation">Programmation
+              <input type="checkbox" data-filter="programmation" class="checkbox-filter theme-classic" name="programmation">
             </label>
-            <label for="design">Jeux
-              <input type="checkbox" data-filter="jeux" class="checkbox-filter" name="jeux">
+            <label class="checkbox-wrapper theme-classic" for="design">Jeux
+              <input type="checkbox" data-filter="jeux" class="checkbox-filter theme-classic" name="jeux">
             </label>
           </div>
         <div class="projets theme-classic">
