--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     <title>Portefolio de Clémentine</title>
   </head>
 
-  <body class="theme-classic">
+  <body class="animate__animated theme-classic">
     
-    <header class="theme-classic">
+    <header class="animate__animated theme-classic">
         <a href="./index.html" class="logo theme-classic">Clémentine Digout</a>
       </div>
       <nav class="nav-header theme-classic">
@@ -58,7 +58,7 @@
 
     <main class="theme-classic">
 
-      <section class="section-hero animate__amimated animate__fadeInDown theme-classic">
+      <section class="section-hero theme-classic">
         <div class="banner__left theme-classic">
                 <div class="banner__content theme-classic">
                     <h1 class="theme-classic">Design Web et Developpement</h1>
