--- a/src/index.html
+++ b/src/index.html
@@ -57,66 +57,92 @@
     </header>
 
     <main class="theme-classic">
-
-      <section class="section-hero theme-classic">
-        <div class="banner__left theme-classic">
-                <div class="banner__content theme-classic">
-                    <h1 class="theme-classic">Design Web et Developpement</h1>
-                    <p class="theme-classic">Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. Sweet roll gummies sweet icing sweet roll wafer. Chocolate lemon drops jujubes jelly-o caramels jelly beans soufflé cheesecake pie. Cake sesame snaps jelly beans ice cream fruitcake danish ice cream. Cupcake gummies biscuit croissant caramels gingerbread jelly-o. Liquorice tootsie roll croissant sesame snaps chupa chups pastry marshmallow shortbread gummies.</p>
-                    <button class="btn-primary theme-classic">En savoir plus <i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-            </div>
-            <div class="banner__right theme-classic">
-              <img class="img__banner theme-classic" src="./assets/img/femme-classique.png" alt="Illustration de femme">
-              <img class="img__banner-2 theme-classic" src="./assets/img/femme-classique.png" alt="Illustration de femme">
-            </div>
-      </section>
-
-      <section class="mes-projets theme-classic" id="mes-projets">
-        <header class="theme-classic">
-          <h2>Mes projets</h2>
-          <i class="fa-solid fa-sliders filter-icon"></i>
-        </header>
-        <div class="filters theme-classic hidden">
-            <label class="checkbox-wrapper theme-classic" for="design">Design UX
-              <input type="checkbox" data-filter="UX" class="checkbox-filter theme-classic" name="UX">
-            </label>
-            <label class="checkbox-wrapper theme-classic" for="design">Design UI
-              <input type="checkbox" data-filter="UI" class="checkbox-filter theme-classic" name="UI">
-            </label>
-            <label class="checkbox-wrapper theme-classic" for="design">Animation
-              <input type="checkbox" data-filter="animation" class="checkbox-filter theme-classic" name="animation">
-            </label>
-            <label class="checkbox-wrapper theme-classic" for="programmation">Programmation
-              <input type="checkbox" data-filter="programmation" class="checkbox-filter theme-classic" name="programmation">
-            </label>
-            <label class="checkbox-wrapper theme-classic" for="design">Jeux
-              <input type="checkbox" data-filter="jeux" class="checkbox-filter theme-classic" name="jeux">
-            </label>
+      
+      <section class="accueil theme-classic">
+        <div class="text-accueil">
+          <h2 class="ml6">
+            <span class="text-wrapper">
+              <span class="portfolio letters">PORTFOLIO</span>
+            </span>
+          </h2>
+          <div class="year-dune">
+            <h3 class="year ml5">
+              <span class="text-wrapper">
+                <span class="line line1"></span>
+                <span class="letters letters-left">2024</span>
+                <span class="line line2"></span>
+              </span>
+            </h3>
+            <p class="dune">d'une</p>
           </div>
-        <div class="projets theme-classic">
-          <button class="slider__btn--previous btn-primary theme-classic">&#10094;</button>
-          <div class="projets-grid theme-classic"></div>
-          <button class="slider__btn--next btn-primary theme-classic">&#10095;</button>
-        </div>
-        <div class="progress theme-classic">
-          <div class="progress__bar"></div>
+          <div class="prog-junior animate__animated animate__rotateIn animate__delay-2s">
+            <p>programmeuse <br>junior passionnée</p>
+          </div>
         </div>
       </section>
 
-      <section id="a-propos"></section>
-
-      <div id="dialog-projets" class="dialog">
-        <div class="dialog-details-projets theme-classic theme-clasic">
-          <button class="btn-close btn-primary"><i class="fa-solid fa-xmark"></i></button>
-          <div class="dialog-content"></div>
-          <div class="btns-dialog">        
-            <button class="btn-previous btn-primary theme-clasic"><i class="fa-solid fa-chevron-left"></i> Précédent</button>
-            <button class="btn-next btn-primary theme-clasic">Suivant <i class="fa-solid fa-chevron-right"></i></button>
+      <div class="wrapper">
+        <section class="section-hero theme-classic">
+          <div class="banner__left theme-classic">
+                  <div class="banner__content theme-classic">
+                      <h1 class="theme-classic">Design Web et Developpement</h1>
+                      <p class="theme-classic">Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. Sweet roll gummies sweet icing sweet roll wafer. Chocolate lemon drops jujubes jelly-o caramels jelly beans soufflé cheesecake pie. Cake sesame snaps jelly beans ice cream fruitcake danish ice cream. Cupcake gummies biscuit croissant caramels gingerbread jelly-o. Liquorice tootsie roll croissant sesame snaps chupa chups pastry marshmallow shortbread gummies.</p>
+                      <button class="btn-primary theme-classic">En savoir plus <i class="fa-solid fa-arrow-right"></i></button>
+                  </div>
+              </div>
+              <div class="banner__right theme-classic">
+                <img class="img__banner theme-classic" src="./assets/img/femme-classique.png" alt="Illustration de femme">
+                <img class="img__banner-2 theme-classic" src="./assets/img/femme-classique.png" alt="Illustration de femme">
+              </div>
+        </section>
+  
+        <section class="mes-projets theme-classic" id="mes-projets">
+          <header class="theme-classic">
+            <h2>Mes projets</h2>
+            <i class="fa-solid fa-sliders filter-icon"></i>
+          </header>
+          <div class="filters theme-classic hidden">
+              <label class="checkbox-wrapper theme-classic" for="design">Design UX
+                <input type="checkbox" data-filter="UX" class="checkbox-filter theme-classic" name="UX">
+              </label>
+              <label class="checkbox-wrapper theme-classic" for="design">Design UI
+                <input type="checkbox" data-filter="UI" class="checkbox-filter theme-classic" name="UI">
+              </label>
+              <label class="checkbox-wrapper theme-classic" for="design">Animation
+                <input type="checkbox" data-filter="animation" class="checkbox-filter theme-classic" name="animation">
+              </label>
+              <label class="checkbox-wrapper theme-classic" for="programmation">Programmation
+                <input type="checkbox" data-filter="programmation" class="checkbox-filter theme-classic" name="programmation">
+              </label>
+              <label class="checkbox-wrapper theme-classic" for="design">Jeux
+                <input type="checkbox" data-filter="jeux" class="checkbox-filter theme-classic" name="jeux">
+              </label>
+            </div>
+          <div class="projets theme-classic">
+            <button class="slider__btn--previous btn-primary theme-classic">&#10094;</button>
+            <div class="projets-grid theme-classic"></div>
+            <button class="slider__btn--next btn-primary theme-classic">&#10095;</button>
+          </div>
+          <div class="progress theme-classic">
+            <div class="progress__bar"></div>
+          </div>
+        </section>
+  
+        <section id="a-propos"></section>
+  
+        <div id="dialog-projets" class="dialog">
+          <div class="dialog-details-projets theme-classic theme-clasic">
+            <button class="btn-close btn-primary"><i class="fa-solid fa-xmark"></i></button>
+            <div class="dialog-content"></div>
+            <div class="btns-dialog">        
+              <button class="btn-previous btn-primary theme-clasic"><i class="fa-solid fa-chevron-left"></i> Précédent</button>
+              <button class="btn-next btn-primary theme-clasic">Suivant <i class="fa-solid fa-chevron-right"></i></button>
+            </div>
           </div>
         </div>
+      </main>
       </div>
-    </main>
+      
 
     <footer class="theme-classic">
       <div class="contact theme-classic" id="contact">
@@ -125,6 +151,8 @@
       </div>
       <i class="fa-brands fa-linkedin-in"></i>
     </footer>
+
+    <script src="anime.min.js"></script>
 
   </body>
 
