add last section

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body class="animate__animated theme-classic">
     
     <header class="animate__animated theme-classic">
-        <a href="./index.html" class="logo theme-classic">Clémentine Digout</a>
+        <a href="./index.html" class="nom theme-classic">Clémentine Digout</a>
       </div>
       <nav class="nav-header theme-classic">
         <ul class="theme-classic">
@@ -75,9 +75,9 @@
             </h3>
             <p class="dune">d'une</p>
           </div>
-          <div class="prog-junior animate__animated animate__rotateIn animate__delay-2s">
-            <p>programmeuse <br>junior passionnée</p>
-          </div>
+            <div class="prog-junior animate__animated animate__rotateIn animate__delay-2s">
+              <p class="text-prog-junior">programmeuse &#10022; <br>junior passionnée</p>
+            </div>
         </div>
       </section>
 
@@ -86,13 +86,18 @@
           <div class="banner__left theme-classic">
                   <div class="banner__content theme-classic">
                       <h1 class="theme-classic">Design Web et Developpement</h1>
-                      <p class="theme-classic">Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. Sweet roll gummies sweet icing sweet roll wafer. Chocolate lemon drops jujubes jelly-o caramels jelly beans soufflé cheesecake pie. Cake sesame snaps jelly beans ice cream fruitcake danish ice cream. Cupcake gummies biscuit croissant caramels gingerbread jelly-o. Liquorice tootsie roll croissant sesame snaps chupa chups pastry marshmallow shortbread gummies.</p>
+                      <p class="theme-classic">Future diplomée en AEC de production en médias interactifs, j'ai décidé de poser ma toque de cheffe pâtissière pour développer mes capacités artistiques. 
+                        <br>
+                      Sans grande surprise, je me suis rapidement interressée au design, mais je me suis surtout découvert une passion dévorante pour la programmation. 
+                      <br>
+                      Je suis curieuse, dynamique, j'aime voyager, découvrir de nouvelles choses et apprécie les nouveaux challenges.
+                      </p>
                       <button class="btn-primary theme-classic">En savoir plus <i class="fa-solid fa-arrow-right"></i></button>
                   </div>
               </div>
               <div class="banner__right theme-classic">
-                <img class="img__banner theme-classic" src="./assets/img/femme-classique.png" alt="Illustration de femme">
-                <img class="img__banner-2 theme-classic" src="./assets/img/femme-classique.png" alt="Illustration de femme">
+                <img class="img__banner theme-classic" src="./assets/img/femme-classique.png" alt="Dessin de femme">
+                <img class="img__banner-2 theme-classic" src="./assets/img/femme-classique.png" alt="Dessin de femme">
               </div>
         </section>
   
@@ -128,7 +133,73 @@
           </div>
         </section>
   
-        <section id="a-propos"></section>
+        <section class="theme-classic a-propos">
+          <h2>À propos de...</h2>
+          <div class="theme-classic apropos-content">
+            <div class="theme-classic competences">
+              <h3 class="theme-classic">Mes compétences</h3>
+              <div class="theme-classic logo-container">
+                <div class="logo">
+                  <img src="./assets/img/adobe-illustrator-cc-3.svg" alt="">
+                  <p>Illustrator</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/adobe-photoshop-2.svg" alt="">
+                  <p>Photoshop</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/after-effects-1.svg" alt="">
+                  <p>After Effetcs</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/angular-icon-1.svg" alt="">
+                  <p>Angular</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/css-3.svg" alt="">
+                  <p>CSS3</p>
+                </div>
+                <div class="logo big">
+                  <img src="./assets/img/figma-icon.svg" alt="">
+                  <p>Figma</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/html-1.svg" alt="">
+                  <p>HTML5</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/javascript-1.svg" alt="">
+                  <p>JavaScript</p>
+                </div>
+                <div class="logo small">
+                  <img src="./assets/img/PHP-logo.svg" alt="">
+                  <p>PHP</p>
+                </div>
+                <div class="logo small">
+                  <img src="./assets/img/React-icon.svg" alt="">
+                  <p>React</p>
+                </div>
+                <div class="logo">
+                  <img src="./assets/img/wordpress-icon-1.svg" alt="">
+                  <p>Wordpress</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="theme-classic experience">
+              <h3 class="theme-classic">Mon experience</h3>
+              <div class="theme-classic experience-content">
+                <p>Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. </p>
+                <p>Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie.</p>
+                <p>Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop.</p>
+                <p>Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie. Chocolate bar bear claw jujubes biscuit halvah sesame snaps gingerbread lollipop. Oat cake candy canes jelly liquorice oat cake brownie. Sugar plum pie candy canes cake shortbread lemon drops jelly sweet apple pie.</p>
+              </div>
+              <button class="download-cv btn-primary theme-classic">Télécharger mon CV <i class="fa-solid fa-arrow-down"></i></button>
+            </div>
+
+          </div>
+
+        </section>
   
         <div id="dialog-projets" class="dialog">
           <div class="dialog-details-projets theme-classic theme-clasic">
@@ -140,9 +211,9 @@
             </div>
           </div>
         </div>
-      </main>
       </div>
-      
+    </main>
+
 
     <footer class="theme-classic">
       <div class="contact theme-classic" id="contact">
@@ -152,7 +223,8 @@
       <i class="fa-brands fa-linkedin-in"></i>
     </footer>
 
-    <script src="anime.min.js"></script>
+    <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap/dist/ScrollTrigger.min.js"></script>
 
   </body>
 
