--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div class="icones theme-classic">
-        <button class="menu-mobile btn-none"><i class="fa-solid fa-bars" data-dialog="#nav-mobile"></i></button>
+        <button class="menu-mobile btn-none theme-classic"><i class="fa-solid fa-bars" data-dialog="#nav-mobile"></i></button>
         <label for="btn-switch-theme" class="color-toggle-wrapper theme-switcher theme-classic">
           <input id="btn-switch-theme-classic" checked name="btn-switch-theme" value="classic" class="color-toggle-classic" type="radio">
           <input id="btn-switch-theme-color" name="btn-switch-theme" value="color" class="color-toggle-color" type="radio">
@@ -76,7 +76,7 @@
             <p class="dune">d'une</p>
           </div>
             <div class="prog-junior animate__animated animate__rotateIn animate__delay-2s">
-              <p class="text-prog-junior">programmeuse &#10022; <br>junior passionnée</p>
+              <p class="text-prog-junior">développeuse &#10022; <br>junior passionnée</p>
             </div>
         </div>
       </section>
@@ -96,8 +96,8 @@
                   </div>
               </div>
               <div class="banner__right theme-classic">
-                <img class="img__banner theme-classic" src="./assets/img/femme-classique.png" alt="Dessin de femme">
-                <img class="img__banner-2 theme-classic" src="./assets/img/femme-classique.png" alt="Dessin de femme">
+                <img class="img__banner theme-classic" src="./assets/img/cleme_line-art-02.png" alt="Dessin de Clémentine">
+                <img class="img__banner-2 theme-classic" src="./assets/img/cleme_line-art-02.png" alt="Dessin de Clémentine">
               </div>
         </section>
   
